--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tauri-apps/cli": "^2",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tslib": "^2.8.0",
     "typescript": "^5.5.0",
     "vite": "^5.4.10"
